# -2016-CMake-LinkingLibraries-

test/: CMakeLists.txt  main.cpp
test/LinkingLibraries/: CMakeLists.txt  main.cpp
test/LinkingLibraries/src/: CMakeLists.txt  Lib1.cpp  Lib1.hpp
test/LinkingLibraries/src2/: CMakeLists.txt  Lib2.cpp  Lib2.hpp
